unpackaged/main/default/objects/QA_Errors__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>QC Errors</relationshipLabel>
    <relationshipName>QC_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>