unpackaged/main/default/objects/QA_Errors__c/fields/Blocking_Future_Clients__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Future_Clients__c</fullName>
    <description>Confirmation about future client blockage.</description>
    <label>Blocking Future Clients?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>