unpackaged/main/default/objects/QA_Errors__c/fields/Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Order</label>
    <referenceTo>Carrier_Order__c</referenceTo>
    <relationshipLabel>QC Errors</relationshipLabel>
    <relationshipName>QC_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>