unpackaged/main/default/objects/QA_Errors__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>QA_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>