unpackaged/main/default/objects/QA_Errors__c/fields/Error_Owner__c.field-meta.xml
<CustomField>
    <fullName>Error_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>