unpackaged/main/default/objects/QA_Errors__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Reversal Case Not Created</fullName>
            </value>
            <value>
                <fullName>Benefit Signatory Missing</fullName>
            </value>
            <value>
                <fullName>Dependent incorrectly enrolled</fullName>
            </value>
            <value>
                <fullName>Dependents not auto-linked during enrollment</fullName>
            </value>
            <value>
                <fullName>Direct deposit not entered</fullName>
            </value>
            <value>
                <fullName>Employee ineligible for selected plan</fullName>
            </value>
            <value>
                <fullName>Enrolled into the wrong Group&apos;s coverage</fullName>
            </value>
            <value>
                <fullName>Enrolled in wrong plan</fullName>
            </value>
            <value>
                <fullName>Enrollment not submitted</fullName>
            </value>
            <value>
                <fullName>External deductions not turned off</fullName>
            </value>
            <value>
                <fullName>Form submitted with portal access</fullName>
            </value>
            <value>
                <fullName>Incorrect Election Amount for FSA</fullName>
            </value>
            <value>
                <fullName>Incorrect Employee / Dependent Information</fullName>
            </value>
            <value>
                <fullName>Incorrect group number</fullName>
            </value>
            <value>
                <fullName>Incorrect or missing run out date</fullName>
            </value>
            <value>
                <fullName>Incorrect plan dates</fullName>
            </value>
            <value>
                <fullName>Incorrect plan or group ID</fullName>
            </value>
            <value>
                <fullName>Incorrect waiting period in hippo</fullName>
            </value>
            <value>
                <fullName>Missing FSA/DCFS</fullName>
            </value>
            <value>
                <fullName>Missing HSA/commuter</fullName>
            </value>
            <value>
                <fullName>Missing information/error on form</fullName>
            </value>
            <value>
                <fullName>Not processed in Hippo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portal error/type</fullName>
            </value>
            <value>
                <fullName>Renewals Case</fullName>
            </value>
            <value>
                <fullName>Termination date incorrectly entered</fullName>
            </value>
            <value>
                <fullName>Wrong effective date</fullName>
            </value>
            <value>
                <fullName>Wrong plans in Hippo</fullName>
            </value>
            <value>
                <fullName>Wrong premium rates in Hippo</fullName>
            </value>
            <value>
                <fullName>Submission method not updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>