unpackaged/main/default/objects/QA_Errors__c/fields/From_Sub_Team_s__c.field-meta.xml
<CustomField>
    <fullName>From_Sub_Team_s__c</fullName>
    <label>From Sub-Team(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Facilitator 1</fullName>
            </value>
            <value>
                <fullName>Facilitator 2</fullName>
            </value>
            <value>
                <fullName>Benefit Transfer Fulfillment</fullName>
            </value>
            <value>
                <fullName>Mid Market Sales</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer</fullName>
            </value>
            <value>
                <fullName>Quality Operations</fullName>
            </value>
            <value>
                <fullName>Automation Operations</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>TAdA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Benefits Advising</fullName>
                <isActive>false</isActive>
                <label>Benefits Advising</label>
            </value>
            <value>
                <fullName>Benefits Designer</fullName>
                <isActive>false</isActive>
                <label>Benefits Designer</label>
            </value>
            <value>
                <fullName>Confirmation</fullName>
                <isActive>false</isActive>
                <label>Confirmation</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Submission</fullName>
                <isActive>false</isActive>
                <label>Submission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>