unpackaged/main/default/objects/QA_Errors__c/fields/QA_Error_Team__c.field-meta.xml
<CustomField>
    <fullName>QA_Error_Team__c</fullName>
    <label>QC Error Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Transfer</fullName>
            </value>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Member Operations</fullName>
            </value>
            <value>
                <fullName>New Plan Sales</fullName>
            </value>
            <value>
                <fullName>Advising Fulfillment</fullName>
            </value>
            <value>
                <fullName>Product Error</fullName>
            </value>
            <value>
                <fullName>Benefits Compliance</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Carrier Error</fullName>
            </value>
            <value>
                <fullName>BoR Sales</fullName>
            </value>
            <value>
                <fullName>UI Vendor Team</fullName>
            </value>
            <value>
                <fullName>Benefits BYB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Group Submission</fullName>
            </value>
            <value>
                <fullName>Group Confirmation</fullName>
            </value>
            <value>
                <fullName>Quality Operations</fullName>
            </value>
            <value>
                <fullName>Automation Operations</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>TAdA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>