unpackaged/main/default/objects/QA_Errors__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>QC Errors</relationshipLabel>
    <relationshipName>QC_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>