unpackaged/main/default/objects/QA_Errors__c/fields/To_Sub_team__c.field-meta.xml
<CustomField>
    <fullName>To_Sub_team__c</fullName>
    <label>To Sub-team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Facilitator 1</fullName>
            </value>
            <value>
                <fullName>Facilitator 2</fullName>
            </value>
            <value>
                <fullName>Quality Operations</fullName>
            </value>
            <value>
                <fullName>Automation Operations</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>TAdA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>