unpackaged/main/default/objects/QA_Errors__c/fields/To_Team__c.field-meta.xml
<CustomField>
    <fullName>To_Team__c</fullName>
    <label>To Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Advising</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Benefits Transfer</fullName>
            </value>
            <value>
                <fullName>Benefits Compliance</fullName>
            </value>
            <value>
                <fullName>Member Processing</fullName>
            </value>
            <value>
                <fullName>New Plan Sales</fullName>
            </value>
            <value>
                <fullName>Member Operations</fullName>
            </value>
            <value>
                <fullName>BoR Sales</fullName>
            </value>
            <value>
                <fullName>Mid Market Sales</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer</fullName>
            </value>
            <value>
                <fullName>UI Vendor Team</fullName>
            </value>
            <value>
                <fullName>Full Stack Sales</fullName>
                <isActive>false</isActive>
                <label>Full Stack Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>