unpackaged/main/default/objects/QA_Errors__c/recordTypes/Payroll_Transfer_Error.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Transfer_Error</fullName>
    <active>true</active>
    <label>Payroll Transfer Error</label>
</RecordType>